<resources>
    <string name="app_name">Minesweeper</string>
    <string name="bomb">💣</string>
    <string name="default_count">000</string>
    <string name="flag">🚩</string>
    <string name="default_mines_count">000</string>

    <string name="seconds">seconds</string>
    <string name="mines">Mines</string>

    <string name="won">You Won!</string>
    <string name="lost">BOOM! \n Game Over</string>
</resources>